Implement snapshot pattern

--- a/TextEditor/TextEditor.csproj
+++ b/TextEditor/TextEditor.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Snapshot\" />
     <Folder Include="ViewModels\" />
     <Folder Include="Views\Services\" />
   </ItemGroup>
